[package]
name = "pliers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# General
rand = "0.8.4"
chrono = "0.4.26"
log = "0.4"
pretty_env_logger = "0.4"

# Serialization and jsons
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Hash functions and base64
openssl = "0.10.54"

# Network-related
libp2p = { version = "0.51.3", features = ["mdns", "tokio", "mplex", "noise", "tcp", "macros", "gossipsub", "yamux", "quic"] }
tokio = { version = "1.28.2" , features = ["sync", "rt", "macros", "io-std"] }